--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 			<artifactId>jakarta.persistence-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
+			</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
